--- a/English/limerick.html
+++ b/English/limerick.html
@@ -49,10 +49,10 @@
         <p>Limerick is shit place in ireland</p>
         
         <ul>
-          <li><a class="active" href="Limerick.html">Limerick</a></li>
-          <li><a href="St'john-church.html">News</a></li>
-          <li><a href="St'john-hospital.html">Contact</a></li>
-          <li><a href="Limerick-Mountian-edge.html">About</a></li>
+          <li><a class="active" href="Lime-rick.html">Limerick</a></li>
+          <li><a href="St'john-church.html">St'John-church</a></li>
+          <li><a href="St'john-hospital.html">St'John-Hospital</a></li>
+          <li><a href="Limerick-Mountian-edge.html">Mountian-edge</a></li>
         </ul>
 </body>
 </html>
