--- a/English/Lime-rick.html
+++ b/English/Lime-rick.html
@@ -10,9 +10,9 @@
     
     <ul>
         <li><a href="limerick.html">Back</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="St'john-church.html">St'John-church</a></li>
+        <li><a href="St'john-hospital.html">John-Hospital</a></li>
+        <li><a href="Limerick-Mountian-edge.html">Cliff</a></li>
     </ul>
 
 </body>
