--- a/English/St'john-church.html
+++ b/English/St'john-church.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Lime-rick.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <ul>
+        <li><a href="limerick.html">Back</a></li>
+        <li><a href="St'john-church.html">St'John-church</a></li>
+        <li><a href="St'john-hospital.html">John-Hospital</a></li>
+        <li><a href="Limerick-Mountian-edge.html">Cliff</a></li>
+    </ul>
 </body>
 </html>
