--- a/English/Lime-rick.html
+++ b/English/Lime-rick.html
@@ -12,7 +12,7 @@
         <li><a href="limerick.html">Back</a></li>
         <li><a href="St'john-church.html">St'John-church</a></li>
         <li><a href="St'john-hospital.html">John-Hospital</a></li>
-        <li><a href="Limerick-Mountian-edge.html">Cliff</a></li>
+        <li><a href="Limerick-Mountian-edge.html">Cliffs of Moher</a></li>
     </ul>
 
 </body>
