--- a/English/St'john-church.html
+++ b/English/St'john-church.html
@@ -13,5 +13,7 @@
         <li><a href="St'john-hospital.html">John-Hospital</a></li>
         <li><a href="Limerick-Mountian-edge.html">Cliff</a></li>
     </ul>
+
+    <img src="St'john-church" alt="">
 </body>
-</html>
+</html
