--- a/English/limerick.html
+++ b/English/limerick.html
@@ -9,14 +9,15 @@
 <body> 
 
     
-                                       <h2>Limerick</h2>
-                              <p>Limerick is shit place in ireland</p>
+   <h2>Limerick</h2>
+   <p>Limerick is shit place in ireland</p>
     
     <ul>
         <li><a class="active" href="Lime-rick.html">Limerick</a></li>
         <li><a href="St'john-church.html">St'John-church</a></li>
         <li><a href="St'john-hospital.html">St'John-Hospital</a></li>
-        <li><a href="Limerick-Mountian-edge.html">Mountian-edge</a></li>
+        <li><a href="Limerick-Mountian-edge.html">Cliffs of Moher</a></li>
     </ul>
+    <div id class="display"></div>
 </body>
 </html>
