--- a/English/St'john-church.html
+++ b/English/St'john-church.html
@@ -14,6 +14,6 @@
         <li><a href="Limerick-Mountian-edge.html">Cliff</a></li>
     </ul>
 
-    <img src="St'john-church" alt="">
+    <img id="display-church" src="church.png" alt="">
 </body>
 </html
